[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/AddPlayer/AddPlayerNode.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/material/ic_add_white_48dp.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/material/ic_add_white_48dp_pressed.png" type="Texture" id=3]

[sub_resource type="DynamicFontData" id=1]

font_path = "res://assets/fonts/RobotoSlab-Bold.ttf"

[sub_resource type="DynamicFont" id=2]

size = 32
use_mipmaps = false
use_filter = false
font_data = SubResource( 1 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="AddPlayerNode" type="HBoxContainer"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 676.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
script = ExtResource( 1 )

[node name="EditName" type="LineEdit" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 608.0
margin_bottom = 64.0
rect_min_size = Vector2( 608, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
align = 1
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = true
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="AddButton" type="TextureButton" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 612.0
margin_right = 676.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
stretch_mode = 1
_sections_unfolded = [ "Anchor", "Textures" ]

[connection signal="text_changed" from="EditName" to="." method="_on_EditName_text_changed"]

[connection signal="pressed" from="AddButton" to="." method="_on_AddButton_pressed"]


